--- a/css/styling.css
+++ b/css/styling.css
@@ -7,16 +7,17 @@
   overflow: hidden; }
   #mbrtWrap .innerWrap {
     position: absolute;
-    width: 90%;
-    width: calc(100% - 20px);
-    height: 90%;
-    height: calc(100% - 20px);
+    width: 100%;
+    height: 100%;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    border: 10px solid #fff;
     margin: auto;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
-    overflow: scroll;
     background-color: #eee; }
     #mbrtWrap .innerWrap header {
       position: fixed;
