--- a/scss/styling.scss
+++ b/scss/styling.scss
@@ -17,13 +17,12 @@
 
 		.innerWrap{
 			position: absolute;
-			width: 90%; // Fall back
-			width: calc(100% - 20px);
-			height: 90%; // Fall back
-			height: calc(100% - 20px);
+			width: 100%;
+			height: 100%;
+			@include sizeFix();
+			border: 10px solid #fff;
 			margin: auto;
 			top: 0; bottom: 0; left: 0; right: 0;
-			overflow: scroll;
 			background-color: $mbrtLightGray;
 
 			header{
@@ -38,7 +37,6 @@
 					width: 20%;
 
 				}
-	
 			}
 
 			section{
