--- a/css/styling.css
+++ b/css/styling.css
@@ -50,12 +50,27 @@
       z-index: 1000000000;
       position: fixed;
       width: 100%;
-      height: 56px; }
+      height: 56px;
+      display: block;
+      margin: 0 auto 20px;
+      border: 1px solid #222;
+      position: relative;
+      background-color: #6a6a6a;
+      font: 16px Tahoma, Sans-serif; }
+      #mbrtWrap .innerWrap nav a span {
+        display: block;
+        float: right;
+        margin-left: 5px; }
       #mbrtWrap .innerWrap nav #dropdown_menu {
         position: absolute;
-        width: 50%;
         margin: 0;
         padding: 0; }
+        #mbrtWrap .innerWrap nav #dropdown_menu:after {
+          content: ".";
+          display: block;
+          height: 0;
+          clear: both;
+          visibility: hidden; }
         #mbrtWrap .innerWrap nav #dropdown_menu li {
           position: relative;
           float: left;
@@ -65,7 +80,36 @@
           /* Fix for IE7 */
           *display: inline;
           /* Fix for IE7 */
-          width: 25%; }
+          list-style-type: none; }
+          #mbrtWrap .innerWrap nav #dropdown_menu li a {
+            display: block;
+            padding: 10px 20px;
+            border-left: 1px solid #999;
+            border-right: 1px solid #222;
+            color: #eee;
+            text-decoration: none; }
+            #mbrtWrap .innerWrap nav #dropdown_menu li a:focus {
+              outline: none;
+              text-decoration: underline; }
+          #mbrtWrap .innerWrap nav #dropdown_menu li li:first-child a {
+            border-left: none; }
+          #mbrtWrap .innerWrap nav #dropdown_menu li li.last a {
+            border-right: none; }
+          #mbrtWrap .innerWrap nav #dropdown_menu li ul {
+            display: none;
+            width: 100%;
+            position: absolute;
+            left: 0;
+            background: #6a6a6a; }
+            #mbrtWrap .innerWrap nav #dropdown_menu li ul li {
+              float: none; }
+            #mbrtWrap .innerWrap nav #dropdown_menu li ul a {
+              padding: 5px 10px;
+              border-left: none;
+              border-right: none;
+              font-size: 14px; }
+              #mbrtWrap .innerWrap nav #dropdown_menu li ul a:hover {
+                background-color: #555; }
         #mbrtWrap .innerWrap nav #dropdown_menu .dropdown_arrow {
           position: relative;
           width: 0;
@@ -75,6 +119,49 @@
           border-top: 8px solid #000;
           border-left: 8px solid transparent;
           border-right: 8px solid transparent; }
+    #mbrtWrap .innerWrap .borderradius nav {
+      -moz-border-radius: 4px;
+      -webkit-border-radius: 4px;
+      border-radius: 4px; }
+    #mbrtWrap .innerWrap .cssgradients nav {
+      background-image: -moz-linear-gradient(0% 22px 90deg, #222, #999);
+      background-image: -webkit-gradient(linear, 0% 0%, 0% 70%, from(#999), to(#222)); }
+    #mbrtWrap .innerWrap .boxshadow.rgba nav {
+      -moz-box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.75);
+      -webkit-box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.75);
+      box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.75); }
+    #mbrtWrap .innerWrap .cssgradients nav li:hover {
+      background-image: -moz-linear-gradient(0% 100px 90deg, #999, #222);
+      background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#222), to(#555)); }
+    #mbrtWrap .innerWrap .borderradius nav ul ul {
+      -moz-border-radius-bottomleft: 4px;
+      -moz-border-radius-bottomright: 4px;
+      -webkit-border-bottom-left-radius: 4px;
+      -webkit-border-bottom-right-radius: 4px;
+      border-bottom-left-radius: 4px;
+      border-bottom-right-radius: 4px; }
+    #mbrtWrap .innerWrap .boxshadow.rgba nav ul ul {
+      background-color: rgba(0, 0, 0, 0.8);
+      -moz-box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.8);
+      -webkit-box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.8);
+      box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.8); }
+    #mbrtWrap .innerWrap .rgba nav ul ul li {
+      border-left: 1px solid rgba(0, 0, 0, 0.1);
+      border-right: 1px solid rgba(0, 0, 0, 0.1); }
+    #mbrtWrap .innerWrap .rgba nav ul ul a:hover {
+      background-color: rgba(85, 85, 85, 0.9); }
+    #mbrtWrap .innerWrap .borderradius.rgba nav ul ul li.last {
+      border-left: 1px solid rgba(0, 0, 0, 0.1);
+      border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+      -moz-border-radius-bottomleft: 4px;
+      -moz-border-radius-bottomright: 4px;
+      -webkit-border-bottom-left-radius: 4px;
+      -webkit-border-bottom-right-radius: 4px;
+      border-bottom-left-radius: 4px;
+      border-bottom-right-radius: 4px; }
+    #mbrtWrap .innerWrap .csstransforms ul a span {
+      -moz-transform: rotate(-180deg);
+      -webkit-transform: rotate(-180deg); }
     #mbrtWrap .innerWrap footer {
       z-index: 1000000000;
       position: fixed;
