--- a/scss/_dropdown_menu.scss
+++ b/scss/_dropdown_menu.scss
@@ -1,22 +1,86 @@
 /* JS disabled styles */
 .no-js nav li:hover ul { display:block; }
 
+
 nav{
 	z-index: 1000000000;
 	position: fixed;
 	width: 100%;
 	height: 56px;
 	// border: 1px solid $mbrtDarkGray;
+	display:block; 
+	margin:  0 auto 20px; 
+	border: 1px solid #222; 
+	position: relative; 
+	background-color: #6a6a6a; 
+	font: 16px Tahoma, Sans-serif;
+
+	a span { display:block; float:right; margin-left:5px; }
 	
 	#dropdown_menu{
 		position: absolute;
-		width: 50%;
+		// width: 50%;
 		margin: 0;
 		padding: 0;
 
+		&:after{
+			content:".";
+			display:block;
+			height:0;
+			clear:both;
+			visibility:hidden;
+		}
+
 		li{
 			@include displayLeft();
-			width: 25%;
+			// width: 25%;
+			list-style-type:none; 
+
+			a { 
+				display:block;
+				padding:10px 20px;
+				border-left:1px solid #999;
+				border-right:1px solid #222;
+				color:#eee;
+				text-decoration:none;
+
+				&:focus{
+					outline:none; 
+					text-decoration:underline; 
+				}
+			}
+
+			li:first-child a { 
+				border-left:none; 
+			}
+
+			li.last a { 
+				border-right:none; 
+			}
+
+			ul{
+				display:none; 
+				width:100%; 
+				position:absolute; 
+				left:0; 
+				background:#6a6a6a;
+
+				li{
+					float:none; 
+				}
+
+				a{ 
+					padding:5px 10px;
+					border-left:none;
+					border-right:none;
+					font-size:14px;
+
+					&:hover{
+						background-color:#555;
+					}
+				}
+				a:hover {  }
+			}
 		}
 
 		.dropdown_arrow{
@@ -32,3 +96,14 @@ nav{
 		}
 	}
 }
+
+.borderradius nav { -moz-border-radius:4px; -webkit-border-radius:4px; border-radius:4px; }
+.cssgradients nav { background-image:-moz-linear-gradient(0% 22px 90deg, #222, #999); background-image:-webkit-gradient(linear, 0% 0%, 0% 70%, from(#999), to(#222)); }
+.boxshadow.rgba nav { -moz-box-shadow:2px 2px 2px rgba(0,0,0,.75); -webkit-box-shadow:2px 2px 2px rgba(0,0,0,.75); box-shadow:2px 2px 2px rgba(0,0,0,.75); }
+.cssgradients nav li:hover { background-image:-moz-linear-gradient(0% 100px 90deg, #999, #222); background-image:-webkit-gradient(linear, 0% 0%, 0% 100%, from(#222), to(#555)); }
+.borderradius nav ul ul { -moz-border-radius-bottomleft:4px; -moz-border-radius-bottomright:4px; -webkit-border-bottom-left-radius:4px; -webkit-border-bottom-right-radius:4px; border-bottom-left-radius:4px; border-bottom-right-radius:4px; }
+.boxshadow.rgba nav ul ul { background-color:rgba(0,0,0,0.8); -moz-box-shadow:2px 2px 2px rgba(0,0,0,.8); -webkit-box-shadow:2px 2px 2px rgba(0,0,0,.8); box-shadow:2px 2px 2px rgba(0,0,0,.8); }
+.rgba nav ul ul li { border-left:1px solid rgba(0,0,0,0.1); border-right:1px solid rgba(0,0,0,0.1); }
+.rgba nav ul ul a:hover { background-color:rgba(85,85,85,.9); }
+.borderradius.rgba nav ul ul li.last { border-left:1px solid rgba(0,0,0,0.1); border-bottom:1px solid rgba(0,0,0,0.1); -moz-border-radius-bottomleft:4px; -moz-border-radius-bottomright:4px; -webkit-border-bottom-left-radius:4px; -webkit-border-bottom-right-radius:4px; border-bottom-left-radius:4px; border-bottom-right-radius:4px; }
+.csstransforms ul a span { -moz-transform:rotate(-180deg);-webkit-transform:rotate(-180deg); }
