Dropdown style done, correcting class name pending

--- a/scss/_hovers.scss
+++ b/scss/_hovers.scss
@@ -1,5 +1,5 @@
-a:hover{
-	color: $mbrtDarkGray;
-	background-color: $mbrtLightGray;
-	@include opacity(0.5);
-}
+// a:hover{
+// 	color: $mbrtDarkGray;
+// 	background-color: $mbrtLightGray;
+// 	@include opacity(0.5);
+// }
