--- a/css/styling.css
+++ b/css/styling.css
@@ -1,3 +1,16 @@
+@font-face {
+  font-family: 'Elegant';
+  src: url("../fonts/ElegantLux-Mager.eot");
+  /* IE9 Compat Modes */
+  src: url("../fonts/ElegantLux-Mager.eot?#iefix") format("embedded-opentype"), url("../fonts/ElegantLux-Mager.woff") format("woff"), url("../fonts/ElegantLux-Mager.woff2") format("woff2"), url("../fonts/ElegantLux-Mager.ttf") format("truetype"), url("../fonts/ElegantLux-Mager.svg#ElegantLux-Mager") format("svg");
+  /* Legacy iOS */ }
+* {
+  font-family: 'Elegant', Helvetica;
+  font-weight: 100;
+  -webkit-font-smoothing: antialiased;
+  -moz-font-smoothing: grayscale;
+  -moz-osx-font-smoothing: grayscale; }
+
 #mbrtWrap {
   position: absolute;
   width: 100%;
@@ -18,8 +31,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: #eee;
-    /* JS disabled styles */ }
+    background-color: #eee; }
     #mbrtWrap .innerWrap section {
       z-index: 1;
       position: relative;
@@ -44,180 +56,153 @@
       -ms-transition: all 0.3s ease-in-out;
       -o-transition: all 0.3s ease-in-out;
       transition: all 0.3s ease-in-out; }
-    #mbrtWrap .innerWrap .no-js nav li:hover ul {
-      display: block; }
-    #mbrtWrap .innerWrap nav {
-      z-index: 1000000000;
-      position: fixed;
-      width: 100%;
-      height: 56px;
+
+/* JS disabled styles */
+.no-js nav li:hover ul {
+  display: block; }
+
+nav {
+  z-index: 1000000000;
+  position: fixed;
+  width: 100%;
+  height: 66px;
+  display: block;
+  margin: 0 auto 20px;
+  position: relative;
+  text-transform: uppercase; }
+  nav ul {
+    position: absolute;
+    height: 100%;
+    margin: 0;
+    padding: 0; }
+    nav ul:after {
+      content: ".";
       display: block;
-      margin: 0 auto 20px;
-      border: 1px solid #222;
+      height: 0;
+      clear: both;
+      visibility: hidden; }
+    nav ul li {
       position: relative;
-      background-color: #6a6a6a;
-      font: 16px Tahoma, Sans-serif; }
-      #mbrtWrap .innerWrap nav a span {
-        display: block;
-        float: right;
-        margin-left: 5px; }
-      #mbrtWrap .innerWrap nav #dropdown_menu {
-        position: absolute;
-        margin: 0;
-        padding: 0; }
-        #mbrtWrap .innerWrap nav #dropdown_menu:after {
-          content: ".";
-          display: block;
-          height: 0;
-          clear: both;
-          visibility: hidden; }
-        #mbrtWrap .innerWrap nav #dropdown_menu li {
-          position: relative;
-          float: left;
-          display: inline-block;
-          vertical-align: top;
-          zoom: 1;
-          /* Fix for IE7 */
-          *display: inline;
-          /* Fix for IE7 */
-          list-style-type: none; }
-          #mbrtWrap .innerWrap nav #dropdown_menu li a {
-            display: block;
-            padding: 10px 20px;
-            border-left: 1px solid #999;
-            border-right: 1px solid #222;
-            color: #eee;
-            text-decoration: none; }
-            #mbrtWrap .innerWrap nav #dropdown_menu li a:focus {
-              outline: none;
-              text-decoration: underline; }
-          #mbrtWrap .innerWrap nav #dropdown_menu li li:first-child a {
-            border-left: none; }
-          #mbrtWrap .innerWrap nav #dropdown_menu li li.last a {
-            border-right: none; }
-          #mbrtWrap .innerWrap nav #dropdown_menu li ul {
-            display: none;
-            width: 100%;
-            position: absolute;
-            left: 0;
-            background: #6a6a6a; }
-            #mbrtWrap .innerWrap nav #dropdown_menu li ul li {
-              float: none; }
-            #mbrtWrap .innerWrap nav #dropdown_menu li ul a {
-              padding: 5px 10px;
-              border-left: none;
-              border-right: none;
-              font-size: 14px; }
-              #mbrtWrap .innerWrap nav #dropdown_menu li ul a:hover {
-                background-color: #555; }
-        #mbrtWrap .innerWrap nav #dropdown_menu .dropdown_arrow {
-          position: relative;
-          width: 0;
-          height: 0;
-          top: 12px;
-          left: 10px;
-          border-top: 8px solid #000;
-          border-left: 8px solid transparent;
-          border-right: 8px solid transparent; }
-    #mbrtWrap .innerWrap .borderradius nav {
-      -moz-border-radius: 4px;
-      -webkit-border-radius: 4px;
-      border-radius: 4px; }
-    #mbrtWrap .innerWrap .cssgradients nav {
-      background-image: -moz-linear-gradient(0% 22px 90deg, #222, #999);
-      background-image: -webkit-gradient(linear, 0% 0%, 0% 70%, from(#999), to(#222)); }
-    #mbrtWrap .innerWrap .boxshadow.rgba nav {
-      -moz-box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.75);
-      -webkit-box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.75);
-      box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.75); }
-    #mbrtWrap .innerWrap .cssgradients nav li:hover {
-      background-image: -moz-linear-gradient(0% 100px 90deg, #999, #222);
-      background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#222), to(#555)); }
-    #mbrtWrap .innerWrap .borderradius nav ul ul {
-      -moz-border-radius-bottomleft: 4px;
-      -moz-border-radius-bottomright: 4px;
-      -webkit-border-bottom-left-radius: 4px;
-      -webkit-border-bottom-right-radius: 4px;
-      border-bottom-left-radius: 4px;
-      border-bottom-right-radius: 4px; }
-    #mbrtWrap .innerWrap .boxshadow.rgba nav ul ul {
-      background-color: rgba(0, 0, 0, 0.8);
-      -moz-box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.8);
-      -webkit-box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.8);
-      box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.8); }
-    #mbrtWrap .innerWrap .rgba nav ul ul li {
-      border-left: 1px solid rgba(0, 0, 0, 0.1);
-      border-right: 1px solid rgba(0, 0, 0, 0.1); }
-    #mbrtWrap .innerWrap .rgba nav ul ul a:hover {
-      background-color: rgba(85, 85, 85, 0.9); }
-    #mbrtWrap .innerWrap .borderradius.rgba nav ul ul li.last {
-      border-left: 1px solid rgba(0, 0, 0, 0.1);
-      border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-      -moz-border-radius-bottomleft: 4px;
-      -moz-border-radius-bottomright: 4px;
-      -webkit-border-bottom-left-radius: 4px;
-      -webkit-border-bottom-right-radius: 4px;
-      border-bottom-left-radius: 4px;
-      border-bottom-right-radius: 4px; }
-    #mbrtWrap .innerWrap .csstransforms ul a span {
-      -moz-transform: rotate(-180deg);
-      -webkit-transform: rotate(-180deg); }
-    #mbrtWrap .innerWrap footer {
-      z-index: 1000000000;
-      position: fixed;
-      width: 63px;
-      height: 20px;
-      right: 68px;
-      bottom: 32px; }
-      #mbrtWrap .innerWrap footer li {
-        position: relative;
-        float: left;
-        display: inline-block;
-        vertical-align: top;
-        zoom: 1;
-        /* Fix for IE7 */
-        *display: inline;
-        /* Fix for IE7 */
-        width: 20px;
-        height: 100%;
-        text-transform: uppercase; }
-      #mbrtWrap .innerWrap footer a {
+      float: left;
+      display: inline-block;
+      vertical-align: top;
+      zoom: 1;
+      /* Fix for IE7 */
+      *display: inline;
+      /* Fix for IE7 */
+      width: 104px;
+      margin: 0 10px;
+      list-style-type: none;
+      font-size: 15px; }
+      nav ul li a {
         display: block;
         width: 100%;
-        height: 100%; }
-      #mbrtWrap .innerWrap footer img {
-        vertical-align: baseline; }
-      #mbrtWrap .innerWrap footer .firstBttn {
-        float: left; }
-      #mbrtWrap .innerWrap footer .secondBttn {
-        float: right; }
-    #mbrtWrap .innerWrap #homeLeftImages {
-      background-color: #e5e3e4;
-      min-height: 500px; }
-      #mbrtWrap .innerWrap #homeLeftImages .bigImgContainer {
-        position: relative;
-        width: 62.5%;
-        height: 100%;
-        background: url("../img/img-1.jpg");
-        background-size: cover;
-        background-position: bottom left; }
-      #mbrtWrap .innerWrap #homeLeftImages .filterWhite {
+        color: #000;
+        text-decoration: none; }
+        nav ul li a:focus {
+          outline: none;
+          text-decoration: underline; }
+        nav ul li a h3 {
+          margin-top: 36px;
+          margin-bottom: 19px;
+          display: inline-block; }
+      nav ul li li:first-child a {
+        border-left: none; }
+      nav ul li li.last a {
+        border-right: none; }
+      nav ul li ul {
+        display: none;
+        width: 100%;
+        height: auto;
         position: absolute;
         left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        background-color: #fff;
-        opacity: 0.1;
-        filter: alpha(opacity=10);
-        filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=($val * 100));
-        -ms-filter: 'progid:DXImageTransform.Microsoft.Alpha(($val * 100))'; }
-    #mbrtWrap .innerWrap a:hover {
-      color: #303030;
-      background-color: #eee;
-      opacity: 0.5;
-      filter: alpha(opacity=50);
-      filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=($val * 100));
-      -ms-filter: 'progid:DXImageTransform.Microsoft.Alpha(($val * 100))'; }
+        border-bottom: 1px solid #919191; }
+        nav ul li ul li {
+          width: 100%;
+          float: none;
+          margin: 0;
+          border-top: 1px solid #919191; }
+          nav ul li ul li a {
+            padding: 0;
+            border-left: none;
+            border-right: none;
+            font-size: 14px; }
+            nav ul li ul li a:hover {
+              opacity: 0.5;
+              filter: alpha(opacity=50);
+              filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=($val * 100));
+              -ms-filter: 'progid:DXImageTransform.Microsoft.Alpha(($val * 100))'; }
+            nav ul li ul li a h4 {
+              font-size: 9px;
+              -webkit-font-smoothing: auto;
+              color: #000;
+              margin-top: 11px; }
+            nav ul li ul li a h5 {
+              font-size: 12px;
+              color: #686868;
+              margin-top: 0;
+              margin-top: 12px;
+              margin-bottom: 14px; }
+    nav ul .dropdown_arrow {
+      position: relative;
+      width: 0;
+      height: 0;
+      display: inline-block;
+      left: 8px;
+      border-top: 8px solid #000;
+      border-left: 8px solid transparent;
+      border-right: 8px solid transparent; }
+
+footer {
+  z-index: 1000000000;
+  position: fixed;
+  width: 63px;
+  height: 20px;
+  right: 68px;
+  bottom: 32px; }
+  footer li {
+    position: relative;
+    float: left;
+    display: inline-block;
+    vertical-align: top;
+    zoom: 1;
+    /* Fix for IE7 */
+    *display: inline;
+    /* Fix for IE7 */
+    width: 20px;
+    height: 100%;
+    text-transform: uppercase; }
+  footer a {
+    display: block;
+    width: 100%;
+    height: 100%; }
+  footer img {
+    vertical-align: baseline; }
+  footer .firstBttn {
+    float: left; }
+  footer .secondBttn {
+    float: right; }
+
+#homeLeftImages {
+  background-color: #e5e3e4;
+  min-height: 500px; }
+  #homeLeftImages .bigImgContainer {
+    position: relative;
+    width: 62.5%;
+    height: 100%;
+    background: url("../img/img-1.jpg");
+    background-size: cover;
+    background-position: bottom left; }
+  #homeLeftImages .filterWhite {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    opacity: 0.1;
+    filter: alpha(opacity=10);
+    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=($val * 100));
+    -ms-filter: 'progid:DXImageTransform.Microsoft.Alpha(($val * 100))'; }
 
 /*# sourceMappingURL=styling.css.map */
