--- a/scss/_dropdown_menu.scss
+++ b/scss/_dropdown_menu.scss
@@ -6,20 +6,16 @@ nav{
 	z-index: 1000000000;
 	position: fixed;
 	width: 100%;
-	height: 56px;
-	// border: 1px solid $mbrtDarkGray;
+	height: 66px;
 	display:block; 
 	margin:  0 auto 20px; 
-	border: 1px solid #222; 
 	position: relative; 
-	background-color: #6a6a6a; 
-	font: 16px Tahoma, Sans-serif;
-
-	a span { display:block; float:right; margin-left:5px; }
+	// background-color: #6a6a6a;
+	text-transform: uppercase;
 	
-	#dropdown_menu{
+	ul{
 		position: absolute;
-		// width: 50%;
+		height: 100%;
 		margin: 0;
 		padding: 0;
 
@@ -31,22 +27,29 @@ nav{
 			visibility:hidden;
 		}
 
+		// Main Nav Links
 		li{
 			@include displayLeft();
-			// width: 25%;
-			list-style-type:none; 
+			width: 104px;
+			margin: 0 10px;
+			list-style-type:none;
+			font-size: 15px;
 
 			a { 
 				display:block;
-				padding:10px 20px;
-				border-left:1px solid #999;
-				border-right:1px solid #222;
-				color:#eee;
+				width: 100%;
+				color:#000;
 				text-decoration:none;
 
 				&:focus{
 					outline:none; 
 					text-decoration:underline; 
+				}
+
+				h3{
+					margin-top: 36px;
+					margin-bottom: 19px;
+					display: inline-block;
 				}
 			}
 
@@ -58,28 +61,50 @@ nav{
 				border-right:none; 
 			}
 
+			// Inner dropdown
 			ul{
 				display:none; 
-				width:100%; 
+				width:100%;
+				height: auto;
 				position:absolute; 
-				left:0; 
-				background:#6a6a6a;
+				left:0;
+				border-bottom: 1px solid #919191;
 
+				// Sub Nav Links
 				li{
-					float:none; 
-				}
+					width: 100%;
+					float:none;
+					margin: 0;
+					border-top: 1px solid #919191;
 
-				a{ 
-					padding:5px 10px;
-					border-left:none;
-					border-right:none;
-					font-size:14px;
+					a{ 
+						padding: 0;
+						border-left:none;
+						border-right:none;
+						font-size:14px;
 
-					&:hover{
-						background-color:#555;
+						&:hover{
+							@include opacity(0.5);
+						}
+
+						h4{
+							font-size: 9px;
+							-webkit-font-smoothing: auto;
+							color: #000;
+							margin-top: 11px;
+						}
+
+						h5{
+							font-size: 12px;
+							color: #686868;
+							margin-top: 0;
+							margin-top: 12px;
+							margin-bottom: 14px;
+						}
 					}
 				}
-				a:hover {  }
+
+				
 			}
 		}
 
@@ -87,8 +112,8 @@ nav{
 			position: relative;
 			width: 0; 
 			height: 0;
-			top: 12px;
-			left: 10px;
+			display: inline-block;
+			left: 8px;
 			border-top: 8px solid #000;
 
 			border-left: 8px solid transparent;
@@ -97,13 +122,3 @@ nav{
 	}
 }
 
-.borderradius nav { -moz-border-radius:4px; -webkit-border-radius:4px; border-radius:4px; }
-.cssgradients nav { background-image:-moz-linear-gradient(0% 22px 90deg, #222, #999); background-image:-webkit-gradient(linear, 0% 0%, 0% 70%, from(#999), to(#222)); }
-.boxshadow.rgba nav { -moz-box-shadow:2px 2px 2px rgba(0,0,0,.75); -webkit-box-shadow:2px 2px 2px rgba(0,0,0,.75); box-shadow:2px 2px 2px rgba(0,0,0,.75); }
-.cssgradients nav li:hover { background-image:-moz-linear-gradient(0% 100px 90deg, #999, #222); background-image:-webkit-gradient(linear, 0% 0%, 0% 100%, from(#222), to(#555)); }
-.borderradius nav ul ul { -moz-border-radius-bottomleft:4px; -moz-border-radius-bottomright:4px; -webkit-border-bottom-left-radius:4px; -webkit-border-bottom-right-radius:4px; border-bottom-left-radius:4px; border-bottom-right-radius:4px; }
-.boxshadow.rgba nav ul ul { background-color:rgba(0,0,0,0.8); -moz-box-shadow:2px 2px 2px rgba(0,0,0,.8); -webkit-box-shadow:2px 2px 2px rgba(0,0,0,.8); box-shadow:2px 2px 2px rgba(0,0,0,.8); }
-.rgba nav ul ul li { border-left:1px solid rgba(0,0,0,0.1); border-right:1px solid rgba(0,0,0,0.1); }
-.rgba nav ul ul a:hover { background-color:rgba(85,85,85,.9); }
-.borderradius.rgba nav ul ul li.last { border-left:1px solid rgba(0,0,0,0.1); border-bottom:1px solid rgba(0,0,0,0.1); -moz-border-radius-bottomleft:4px; -moz-border-radius-bottomright:4px; -webkit-border-bottom-left-radius:4px; -webkit-border-bottom-right-radius:4px; border-bottom-left-radius:4px; border-bottom-right-radius:4px; }
-.csstransforms ul a span { -moz-transform:rotate(-180deg);-webkit-transform:rotate(-180deg); }
