--- a/scss/styling.scss
+++ b/scss/styling.scss
@@ -1,71 +1,79 @@
 @import 'mixins';
-
-// General style
+@import 'fonts';
 	
-	// Variables
-	$mainHeight: 50px;
-	$mbrtLightGray: #eee;
-	$mbrtDarkGray: #303030;
+// Variables
+$mainHeight: 50px;
+$mbrtLightGray: #eee;
+$mbrtDarkGray: #303030;
 
-	#mbrtWrap{
+*{
+	font-family: 'Elegant', Helvetica;
+	font-weight: 100;
+	-webkit-font-smoothing: antialiased;
+	-moz-font-smoothing: grayscale;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+// Default Style
+#mbrtWrap{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+
+	.innerWrap{
 		position: absolute;
 		width: 100%;
 		height: 100%;
-		margin: 0;
-		padding: 0;
-		overflow: hidden;
+		overflow-y: scroll;
+		@include sizeFix();
+		margin: auto;
+		top: 0; bottom: 0; left: 0; right: 0;
+		background-color: $mbrtLightGray;
 
-		.innerWrap{
-			position: absolute;
+		section{
+			z-index: 1;
+			position: relative;
 			width: 100%;
 			height: 100%;
-			overflow-y: scroll;
-			@include sizeFix();
-			margin: auto;
-			top: 0; bottom: 0; left: 0; right: 0;
-			background-color: $mbrtLightGray;
+			line-height: 100vh;
+			top: 0; left: 0;
+		}
 
-			section{
-				z-index: 1;
-				position: relative;
-				width: 100%;
-				height: 100%;
-				line-height: 100vh;
-				top: 0; left: 0;
-			}
+		.mbrtBttns{
+			line-height: 20px;
+		}
 
-			.mbrtBttns{
-				line-height: 20px;
-			}
+		.mbrtLinks{
+			display: block;
+			text-align: center;
+			text-decoration: none;
+			color: $mbrtLightGray;
+			font-weight: lighter;
+			background-color: $mbrtDarkGray;
+			line-height: $mainHeight;
+		}
 
-			.mbrtLinks{
-				display: block;
-				text-align: center;
-				text-decoration: none;
-				color: $mbrtLightGray;
-				font-weight: lighter;
-				background-color: $mbrtDarkGray;
-				line-height: $mainHeight;
-			}
-
-			a{
-				@include transitions(all, 0.3s, ease-in-out);
-			}
-
-			// Header Classes
-			@import 'dropdown_menu';
-
-			// Footer Classes
-			@import 'footer';
-
-
-
-			// Section Classes by Content
-			@import 'sections/home-big_background_left';
-
-
-
-			// Hover Animation Classes
-			@import 'hovers';
+		a{
+			@include transitions(all, 0.3s, ease-in-out);
 		}
 	}
+}
+
+// Header Classes
+@import 'dropdown_menu';
+
+// Footer Classes
+@import 'footer';
+
+
+
+// Section Classes by Content
+@import 'sections/home-big_background_left';
+
+
+
+// Hover Animation Classes
+@import 'hovers';
