--- a/css/styling.css
+++ b/css/styling.css
@@ -11,147 +11,139 @@
   -moz-font-smoothing: grayscale;
   -moz-osx-font-smoothing: grayscale; }
 
-#mbrtWrap {
+.innerWrap {
   position: absolute;
   width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
-  overflow: hidden; }
-  #mbrtWrap .innerWrap {
-    position: absolute;
+  overflow-y: scroll;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  background-color: #eee; }
+  .innerWrap section {
+    z-index: 1;
+    position: relative;
     width: 100%;
     height: 100%;
-    overflow-y: scroll;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    margin: auto;
+    line-height: 100vh;
     top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-color: #eee; }
-    #mbrtWrap .innerWrap section {
-      z-index: 1;
-      position: relative;
-      width: 100%;
-      height: 100%;
-      line-height: 100vh;
-      top: 0;
-      left: 0; }
-    #mbrtWrap .innerWrap .mbrtBttns {
-      line-height: 20px; }
-    #mbrtWrap .innerWrap .mbrtLinks {
-      display: block;
-      text-align: center;
-      text-decoration: none;
-      color: #eee;
-      font-weight: lighter;
-      background-color: #303030;
-      line-height: 50px; }
-    #mbrtWrap .innerWrap a {
-      -webkit-transition: all 0.3s ease-in-out;
-      -moz-transition: all 0.3s ease-in-out;
-      -ms-transition: all 0.3s ease-in-out;
-      -o-transition: all 0.3s ease-in-out;
-      transition: all 0.3s ease-in-out; }
+    left: 0; }
+  .innerWrap a {
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -ms-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out; }
 
 /* JS disabled styles */
 .no-js nav li:hover ul {
-  display: block; }
+  display: block !important; }
 
-nav {
-  z-index: 1000000000;
+header {
   position: fixed;
   width: 100%;
-  height: 66px;
-  display: block;
-  margin: 0 auto 20px;
-  position: relative;
-  text-transform: uppercase; }
-  nav ul {
+  height: 76px;
+  z-index: 1000000000; }
+  header #main_logo {
     position: absolute;
-    height: 100%;
-    margin: 0;
-    padding: 0; }
-    nav ul:after {
-      content: ".";
-      display: block;
-      height: 0;
-      clear: both;
-      visibility: hidden; }
-    nav ul li {
-      position: relative;
-      float: left;
-      display: inline-block;
-      vertical-align: top;
-      zoom: 1;
-      /* Fix for IE7 */
-      *display: inline;
-      /* Fix for IE7 */
-      width: 104px;
-      margin: 0 10px;
-      list-style-type: none;
-      font-size: 15px; }
-      nav ul li a {
+    top: 42px;
+    left: 4.5%; }
+    header #main_logo img {
+      vertical-align: top; }
+  header #main_nav {
+    position: absolute;
+    display: block;
+    width: 510px;
+    right: 10%;
+    text-transform: uppercase; }
+    header #main_nav .main_ul {
+      position: absolute;
+      height: 100%;
+      margin: 0;
+      padding: 0; }
+      header #main_nav .main_ul:after {
+        content: ".";
         display: block;
-        width: 100%;
-        color: #000;
-        text-decoration: none; }
-        nav ul li a:focus {
-          outline: none;
-          text-decoration: underline; }
-        nav ul li a h3 {
-          margin-top: 36px;
-          margin-bottom: 19px;
-          display: inline-block; }
-      nav ul li li:first-child a {
-        border-left: none; }
-      nav ul li li.last a {
-        border-right: none; }
-      nav ul li ul {
-        display: none;
-        width: 100%;
-        height: auto;
-        position: absolute;
-        left: 0;
-        border-bottom: 1px solid #919191; }
-        nav ul li ul li {
+        height: 0;
+        clear: both;
+        visibility: hidden; }
+      header #main_nav .main_ul .main_nav_link {
+        position: relative;
+        float: left;
+        display: inline-block;
+        vertical-align: top;
+        zoom: 1;
+        /* Fix for IE7 */
+        *display: inline;
+        /* Fix for IE7 */
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
+        padding: 0 8px;
+        margin: 0 12px;
+        list-style-type: none; }
+        header #main_nav .main_ul .main_nav_link a {
+          display: block;
           width: 100%;
-          float: none;
-          margin: 0;
-          border-top: 1px solid #919191; }
-          nav ul li ul li a {
+          color: #000;
+          text-decoration: none; }
+          header #main_nav .main_ul .main_nav_link a:focus {
+            outline: none;
+            text-decoration: underline; }
+          header #main_nav .main_ul .main_nav_link a h3 {
+            font-size: 18px;
+            margin-top: 32px;
+            margin-bottom: 19px;
+            display: inline-block; }
+          header #main_nav .main_ul .main_nav_link a .dropdown_arrow {
+            position: relative;
+            width: 0;
+            height: 0;
+            display: inline-block;
+            top: -2px;
+            left: 8px;
+            border-top: 6px solid #000;
+            border-left: 6px solid transparent;
+            border-right: 6px solid transparent; }
+        header #main_nav .main_ul .main_nav_link .sub_ul {
+          display: none;
+          position: absolute;
+          width: 100%;
+          height: auto;
+          left: 4px;
+          padding: 0;
+          border-bottom: 1px solid #919191;
+          list-style-type: none; }
+          header #main_nav .main_ul .main_nav_link .sub_ul .sub_nav_link {
+            width: 100%;
+            float: none;
+            margin: 0;
             padding: 0;
-            border-left: none;
-            border-right: none;
-            font-size: 14px; }
-            nav ul li ul li a:hover {
-              opacity: 0.5;
-              filter: alpha(opacity=50);
-              filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=($val * 100));
-              -ms-filter: 'progid:DXImageTransform.Microsoft.Alpha(($val * 100))'; }
-            nav ul li ul li a h4 {
-              font-size: 9px;
-              -webkit-font-smoothing: auto;
-              color: #000;
-              margin-top: 11px; }
-            nav ul li ul li a h5 {
-              font-size: 12px;
-              color: #686868;
-              margin-top: 0;
-              margin-top: 12px;
-              margin-bottom: 14px; }
-    nav ul .dropdown_arrow {
-      position: relative;
-      width: 0;
-      height: 0;
-      display: inline-block;
-      left: 8px;
-      border-top: 8px solid #000;
-      border-left: 8px solid transparent;
-      border-right: 8px solid transparent; }
+            border-top: 1px solid #919191; }
+            header #main_nav .main_ul .main_nav_link .sub_ul .sub_nav_link a {
+              padding: 0;
+              border-left: none;
+              border-right: none;
+              font-size: 14px; }
+              header #main_nav .main_ul .main_nav_link .sub_ul .sub_nav_link a:hover {
+                opacity: 0.5;
+                filter: alpha(opacity=50);
+                filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=($val * 100));
+                -ms-filter: 'progid:DXImageTransform.Microsoft.Alpha(($val * 100))'; }
+              header #main_nav .main_ul .main_nav_link .sub_ul .sub_nav_link a h4 {
+                font-size: 9px;
+                -webkit-font-smoothing: auto;
+                color: #000;
+                margin-top: 11px; }
+              header #main_nav .main_ul .main_nav_link .sub_ul .sub_nav_link a h5, header #main_nav .main_ul .main_nav_link .sub_ul .sub_nav_link a h6 {
+                font-size: 13px;
+                letter-spacing: 1px;
+                color: #686868;
+                margin-top: 0;
+                margin-top: 12px;
+                margin-bottom: 14px; }
 
 footer {
   z-index: 1000000000;
