--- a/scss/snippets/_dropdown_menu.scss
+++ b/scss/snippets/_dropdown_menu.scss
@@ -20,9 +20,8 @@ header{
 	#main_nav{
 		position: absolute;
 		display:block;
-		width: 510px;
-		right: 10%; 
-		// background-color: #6a6a6a;
+		width: 540px;
+		right: 10%;
 		text-transform: uppercase;
 		
 		// Whole dropdown
@@ -44,7 +43,7 @@ header{
 			.main_nav_link{
 				@include displayLeft();
 				@include sizeFix();
-				// width: 104px;
+				min-width: 104px;
 				padding: 0 8px;
 				margin: 0 12px;
 				list-style-type:none;
@@ -101,7 +100,7 @@ header{
 						border-top: 1px solid #919191;
 
 						a{ 
-							padding: 0;
+							padding: 0 0 0 2px;
 							border-left:none;
 							border-right:none;
 							font-size:14px;
