--- a/scss/styling.scss
+++ b/scss/styling.scss
@@ -1,10 +1,10 @@
-@import 'mixins';
-@import 'fonts';
-	
-// Variables
-$mainHeight: 50px;
-$mbrtLightGray: #eee;
-$mbrtDarkGray: #303030;
+// Helpers Classes
+@import 'helpers/mixins';
+@import 'helpers/fonts';
+@import 'helpers/hovers';
+
+
+// Default Styling	
 
 *{
 	font-family: 'Elegant', Helvetica;
@@ -14,9 +14,6 @@ $mbrtDarkGray: #303030;
 	-moz-osx-font-smoothing: grayscale;
 }
 
-// Default Style
-
-
 .innerWrap{
 	position: absolute;
 	width: 100%;
@@ -25,14 +22,13 @@ $mbrtDarkGray: #303030;
 	padding: 0;
 	overflow-y: scroll;
 	@include sizeFix();
-	background-color: $mbrtLightGray;
+	background-color: #eee;
 
 	section{
 		z-index: 1;
 		position: relative;
 		width: 100%;
 		height: 100%;
-		line-height: 100vh;
 		top: 0; left: 0;
 	}
 
@@ -42,18 +38,17 @@ $mbrtDarkGray: #303030;
 }
 
 
-// Header Classes
-@import 'dropdown_menu';
-
-// Footer Classes
-@import 'footer';
-
+// Snippets Classes
+@import 'snippets/dropdown_menu';
+@import 'snippets/footer';
 
 
 // Section Classes by Content
 @import 'sections/home-big_background_left';
+@import 'sections/carousel-simple.scss';
 
 
 
-// Hover Animation Classes
-@import 'hovers';
+
+
+
