--- a/css/styling.css
+++ b/css/styling.css
@@ -115,7 +115,8 @@ header {
           left: 4px;
           padding: 0;
           border-bottom: 1px solid #919191;
-          list-style-type: none; }
+          list-style-type: none;
+          background-color: #eee; }
           header #main_nav .main_ul .main_nav_link .sub_ul .sub_nav_link {
             width: 100%;
             float: none;
@@ -123,7 +124,7 @@ header {
             padding: 0;
             border-top: 1px solid #919191; }
             header #main_nav .main_ul .main_nav_link .sub_ul .sub_nav_link a {
-              padding: 0 0 0 2px;
+              padding: 0 0 0 7px;
               border-left: none;
               border-right: none;
               font-size: 14px; }
@@ -201,7 +202,8 @@ footer {
 .carousel_container {
   position: absolute;
   width: 84%;
-  height: 504px;
+  height: 54%;
+  min-height: 384px;
   margin: auto;
   top: 0;
   bottom: 0;
@@ -221,16 +223,17 @@ footer {
   .carousel_container .carousel_simple {
     position: relative;
     width: 100%;
-    height: 454px;
+    height: 90%;
+    overflow: hidden;
     border: 1px solid green;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box; }
     .carousel_container .carousel_simple .inner_slider {
       position: relative;
+      width: 150%;
       height: 100%;
-      display: block;
-      overflow: hidden; }
+      display: block; }
       .carousel_container .carousel_simple .inner_slider .product_card {
         position: relative;
         float: left;
@@ -240,14 +243,40 @@ footer {
         /* Fix for IE7 */
         *display: inline;
         /* Fix for IE7 */
-        width: 25%;
+        width: 16.66%;
         height: 100%;
+        text-align: center;
         box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2); }
+        .carousel_container .carousel_simple .inner_slider .product_card .img_container {
+          position: relative;
+          width: 100%;
+          height: 75%;
+          padding: 0 10%;
+          -webkit-box-sizing: border-box;
+          -moz-box-sizing: border-box;
+          box-sizing: border-box;
+          border: 1px solid aqua; }
+          .carousel_container .carousel_simple .inner_slider .product_card .img_container img {
+            position: absolute;
+            margin: auto;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0; }
+        .carousel_container .carousel_simple .inner_slider .product_card .info_container {
+          position: relative;
+          width: 100%;
+          height: 25%; }
+          .carousel_container .carousel_simple .inner_slider .product_card .info_container .product_name, .carousel_container .carousel_simple .inner_slider .product_card .info_container .product_price {
+            margin: 0 0 10px 0;
+            font-size: 14px;
+            letter-spacing: 1px;
+            text-transform: uppercase; }
 
 .arrow_container {
   position: absolute;
   width: 20px;
-  height: 454px;
+  height: 50px;
   margin: auto;
   top: 50px;
   bottom: 0;
@@ -296,5 +325,10 @@ footer {
 
 .right_arrow_nav {
   left: 92%; }
+
+.return_to_collection {
+  position: absolute;
+  width: 132px;
+  height: 38px; }
 
 /*# sourceMappingURL=styling.css.map */
