--- a/css/styling.css
+++ b/css/styling.css
@@ -146,59 +146,6 @@ header {
                 margin-top: 12px;
                 margin-bottom: 14px; }
 
-footer {
-  z-index: 1000000000;
-  position: fixed;
-  width: 63px;
-  height: 20px;
-  right: 68px;
-  bottom: 32px; }
-  footer li {
-    position: relative;
-    float: left;
-    display: inline-block;
-    vertical-align: top;
-    zoom: 1;
-    /* Fix for IE7 */
-    *display: inline;
-    /* Fix for IE7 */
-    width: 20px;
-    height: 100%;
-    text-transform: uppercase; }
-  footer a {
-    display: block;
-    width: 100%;
-    height: 100%; }
-  footer img {
-    vertical-align: baseline; }
-  footer .firstBttn {
-    float: left; }
-  footer .secondBttn {
-    float: right; }
-
-.home_left_images {
-  background-color: #e5e3e4;
-  min-height: 500px;
-  line-height: 100vh; }
-  .home_left_images .big_img_container {
-    position: relative;
-    width: 62.5%;
-    height: 100%;
-    background: url("../img/img-1.jpg");
-    background-size: cover;
-    background-position: bottom left; }
-  .home_left_images .filter_white {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #fff;
-    opacity: 0.1;
-    filter: alpha(opacity=10);
-    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=($val * 100));
-    -ms-filter: 'progid:DXImageTransform.Microsoft.Alpha(($val * 100))'; }
-
 .carousel_container {
   position: absolute;
   width: 84%;
@@ -233,7 +180,13 @@ footer {
       position: relative;
       width: 150%;
       height: 100%;
-      display: block; }
+      left: 0;
+      display: block;
+      -webkit-transition: all 0.6s ease-in-out;
+      -moz-transition: all 0.6s ease-in-out;
+      -ms-transition: all 0.6s ease-in-out;
+      -o-transition: all 0.6s ease-in-out;
+      transition: all 0.6s ease-in-out; }
       .carousel_container .carousel_simple .inner_slider .product_card {
         position: relative;
         float: left;
@@ -243,7 +196,7 @@ footer {
         /* Fix for IE7 */
         *display: inline;
         /* Fix for IE7 */
-        width: 16.66%;
+        width: 16.6666666667%;
         height: 100%;
         text-align: center;
         box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2); }
@@ -330,5 +283,58 @@ footer {
   position: absolute;
   width: 132px;
   height: 38px; }
+
+footer {
+  z-index: 1000000000;
+  position: fixed;
+  width: 63px;
+  height: 20px;
+  right: 68px;
+  bottom: 32px; }
+  footer li {
+    position: relative;
+    float: left;
+    display: inline-block;
+    vertical-align: top;
+    zoom: 1;
+    /* Fix for IE7 */
+    *display: inline;
+    /* Fix for IE7 */
+    width: 20px;
+    height: 100%;
+    text-transform: uppercase; }
+  footer a {
+    display: block;
+    width: 100%;
+    height: 100%; }
+  footer img {
+    vertical-align: baseline; }
+  footer .firstBttn {
+    float: left; }
+  footer .secondBttn {
+    float: right; }
+
+.home_left_images {
+  background-color: #e5e3e4;
+  min-height: 500px;
+  line-height: 100vh; }
+  .home_left_images .big_img_container {
+    position: relative;
+    width: 62.5%;
+    height: 100%;
+    background: url("../img/img-1.jpg");
+    background-size: cover;
+    background-position: bottom left; }
+  .home_left_images .filter_white {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    opacity: 0.1;
+    filter: alpha(opacity=10);
+    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=($val * 100));
+    -ms-filter: 'progid:DXImageTransform.Microsoft.Alpha(($val * 100))'; }
 
 /*# sourceMappingURL=styling.css.map */
