--- a/scss/snippets/_carousel-simple.scss
+++ b/scss/snippets/_carousel-simple.scss
@@ -5,6 +5,10 @@ $product_card_width: 100% / $total_products;
 $inner_slider_width: (100% / $products_to_show) * $total_products;
 $transitions_timing: 0.6s;
 
+#product_carousel{
+	background-color: #fff;
+}
+
 .carousel_container{
 	position: absolute;
 	width: 84%;
@@ -14,7 +18,6 @@ $transitions_timing: 0.6s;
 	margin: auto;
 	top: 0; bottom: 0; left: 0; right: 0;
 
-	border: 1px solid gray;
 	@include sizeFix();
 
 	.product_type{
@@ -33,7 +36,6 @@ $transitions_timing: 0.6s;
 		height: 90%;
 		overflow: hidden;
 
-		border: 1px solid green;
 		@include sizeFix();
 
 		.inner_slider{
@@ -51,7 +53,6 @@ $transitions_timing: 0.6s;
 				height: 100%;
 				text-align: center;
 				// background-color: #fff;
-				box-shadow: 5px 5px 5px rgba(0,0,0,0.2);
 
 				.img_container{
 					position: relative;
@@ -60,7 +61,6 @@ $transitions_timing: 0.6s;
 					padding: 0 10%;
 					
 					@include sizeFix();
-					border: 1px solid aqua;
 
 					img{
 						position: absolute;
@@ -97,7 +97,6 @@ $transitions_timing: 0.6s;
 	top: 50px;
 	bottom: 0;
 
-	border: 1px solid red;
 	@include sizeFix();
 
 	.carousel_arrows{
@@ -139,4 +138,70 @@ $transitions_timing: 0.6s;
 	position: absolute;
 	width: 132px;
 	height: 38px;
+	left: 45px;
+	bottom: 31px;
+	text-decoration: none;
+	text-transform: uppercase;
+
+	@include transitions(all, 0.4s, ease-in-out);
+
+	&:hover{
+		@include opacity(0.5);
+	}
+
+	div{
+		position: relative;
+		float: left;
+		height: 100%;
+	}
+
+	.return_arrow{
+		width: 10px;
+		margin-right: 17px;
+
+		.draw_arrow{
+			position: relative;
+			width: 0;
+			height: 0;
+			top: 39%;
+			border-right: 8px solid #000;
+
+			border-top: 8px solid transparent;
+			border-bottom: 8px solid transparent;
+		}
+	}
+
+	.return_data{
+		width: 105px;
+		@include sizeFix();
+		padding-left: 3px;
+		border-bottom: 1px solid #919191;
+
+		div{
+			width: 100%;
+
+			h4, h5{
+				margin: 0;
+			}
+		}
+
+		.collection_type{
+			height: 39%;
+
+			h4{
+				color: #000;
+				font-size: 9px;
+				-webkit-font-smoothing: auto;
+			}
+		}
+		.collection_name{
+			height: 61%;
+
+			h5{
+				color: #686868;
+				font-size: 13px;
+				letter-spacing: 1px;
+			}
+		}
+	}
 }
