--- a/scss/snippets/_carousel-simple.scss
+++ b/scss/snippets/_carousel-simple.scss
@@ -1,6 +1,6 @@
 // Carousel Variables
 $total_products: 6;
-$products_to_show: 4;
+$products_to_show: 3;
 $product_card_width: 100% / $total_products;
 $inner_slider_width: (100% / $products_to_show) * $total_products;
 $transitions_timing: 0.6s;
@@ -27,6 +27,8 @@ $transitions_timing: 0.6s;
 		font-size: 50px;
 		line-height: 50px;
 		letter-spacing: 5px;
+		@include sizeFix();
+		padding-left: 2%;
 	}
 
 	.carousel_simple{
@@ -52,18 +54,21 @@ $transitions_timing: 0.6s;
 				width: $product_card_width;
 				height: 100%;
 				text-align: center;
+				@include sizeFix();
+				padding: 0 1%;
 				// background-color: #fff;
 
 				.img_container{
 					position: relative;
 					width: 100%;
 					height: 75%;
-					padding: 0 10%;
+					overflow: hidden;
 					
 					@include sizeFix();
 
 					img{
 						position: absolute;
+						width: 100%;
 						margin: auto;
 						top: 0; bottom: 0;
 						left: 0; right: 0;
@@ -94,7 +99,7 @@ $transitions_timing: 0.6s;
 	// height: 454px;
 	height: 50px;
 	margin: auto;
-	top: 50px;
+	top: -5%;
 	bottom: 0;
 
 	@include sizeFix();
