--- a/scss/snippets/_carousel-simple.scss
+++ b/scss/snippets/_carousel-simple.scss
@@ -7,6 +7,7 @@ $transitions_timing: 0.6s;
 
 #product_carousel{
 	background-color: #fff;
+	@include transitions(all, 0.8s, ease-in-out);
 }
 
 .carousel_container{
